# rosdistro

./: .git-credentials.enc  .gitignore  .travis.yml  .yamllint  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README  README.md  REVIEW_GUIDELINES.md  backports.yaml  fuerte.yaml  index-v4.yaml  index.yaml  push_cache.sh  readme.rst  repos.yaml  requirements.in  requirements.txt  requirements_lock.txt  ros.asc  ros.key  rosdistros.yaml  sort.py  targets.yaml  tracks.yaml
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  labeler-config.yaml  mergify.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: doc_index_template.md  rosdep_pull_request_template.md  rosdep_rule_template.md  rosdistro_pull_request_template.md
.github/workflows/: apply_sync_hold.yaml  build_test.yaml  cut_new_release.yaml  labeler.yaml  merge_upstream.yaml  preserve_cache.yaml  release_cache.yaml  reviewer.yaml  stale_labeler.yaml  yamllint.yaml
ardent/: distribution.yaml
bazel/python/: BUILD.bazel  macros.bzl  pytest_main.py
bazel/python/cc/: BUILD.bazel
bouncy/: distribution.yaml
checksums/: ros-apt-source_1.1.0~focal_all.deb.sha256.txt  ros-testing-apt-source_1.1.0~focal_all.deb.sha256.txt
crystal/: distribution.yaml
dashing/: distribution.yaml
doc/: fuerte-doc.yaml  fuerte-dry-doc.yaml  groovy-doc.yaml  groovy-dry-doc.yaml
doc/electric/: alufr-humanoid_stacks.rosinstall  android_sensors_driver.rosinstall  appl.rosinstall  ar_kinect.rosinstall  arbotix.rosinstall  (+214 more)
eloquent/: distribution.yaml
foxy/: distribution.yaml
galactic/: distribution.yaml
groovy/: distribution.yaml  doc-build.yaml  doc.yaml  release-build.yaml  release.yaml  source-build.yaml  source.yaml
humble/: distribution.yaml
hydro/: distribution.yaml  doc-build.yaml  doc.yaml  release-build.yaml  release.yaml  source-build.yaml  source.yaml
indigo/: .distribution.yaml.swp  distribution.yaml  doc-build.yaml  iliad-dist.yaml  lcas-dist.yaml  release-build.yaml  source-build.yaml  strands-dist.yaml
iron/: distribution.yaml
jade/: distribution.yaml  doc-build.yaml  release-build.yaml  source-build.yaml
jazzy/: distribution.yaml
kilted/: distribution.yaml
kinetic/: distribution.yaml  filter_list_restricted.txt  iliad-dist.yaml  lcas-dist.yaml
lunar/: distribution.yaml
lyrical/: distribution.yaml
melodic/: distribution.yaml
migration-tools/: README.md  migrate-rosdistro.py  requirements.txt
noetic/: distribution.yaml
r2b2/: distribution.yaml
r2b3/: distribution.yaml
releases/: arches.yaml  backports.yaml  fuerte-ci-jobs.yaml  fuerte-devel.yaml  fuerte-doc.yaml  fuerte-dry-doc.yaml  fuerte.yaml  groovy-dependencies.yaml  groovy-devel.yaml  groovy-doc.yaml  groovy-dry-doc.yaml  groovy.yaml  hydro-devel.yaml  hydro.yaml  targets.yaml  test.yaml
rolling/: distribution.yaml
rosdep/: Undefined pacakges:  base.yaml  base2.yaml  gentoo.yaml  javascript.yaml  lcas.yaml  multistrap  osx-homebrew.yaml  python.yaml  rosdep-xenial.yaml  ruby.yaml
scripts/: __init__.py  add_devel_repo.py  add_release_repo.py  check_blocking_repos.py  check_changed_urls.py  check_duplicates.py  check_rosdep.py  check_rosdistro.py  check_rosdistro_repos.py  check_rosdistro_urls.py  clean_rosdep_yaml.py  count_rosdistro_packages.py  howto_get_stats_from_history.txt  run_gource.bash  sort.py  sort_yaml.py  sync-ros2-gbp-devel-branch.py  yaml2rosinstall.py
test/: cidiff.py  clean_rosdep_yaml_test.py  fold_block.py  get_changed_lines.py  hook_permissions.py  requirements.txt  rosdep_duplicates_test.py  rosdep_formatting_test.py  rosdistro_check_urls.py  rosdistro_check_urls_test.py  rosdistro_formatting_test.py  rosdistro_verify_test.py  test_build_caches.py  test_indexes_equal.py  test_license_values.py  test_release_repository.py  test_url_validity.py
(+989 files in other folders)
