# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "rosdistro",
    version = "rolling-2025-09-05",
    compatibility_level = 0,
)

bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_python", version = "1.6.1")

PYTHON_VERSIONS = [
    "3.11",
    "3.12",  # default
]

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
[
    python.toolchain(
        python_version = python_version,
        is_default = python_version == PYTHON_VERSIONS[-1],
    )
    for python_version in PYTHON_VERSIONS
]

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
[
    pip.parse(
        hub_name = "pip_ros",
        python_version = python_version,
        requirements_lock = "requirements_lock.txt",
    )
    for python_version in PYTHON_VERSIONS
]
use_repo(pip, "pip_ros")
